--- a/pages/AddContact.html
+++ b/pages/AddContact.html
@@ -7,6 +7,15 @@
     <title>Add Person</title>
 </head>
 <body>
+    <header class="header-content header">
+        <div class="logo-content">
+            <img src="../assets/icon.png" alt="" height="50" width="50" >
+            <div>
+                <span class="emp-text">ADDRESS</span><br>
+                <span class="emp-text emp-payroll">BOOK</span>
+            </div>
+        </div>
+    </header>
     
 </body>
 </html>
