ADDED: css for header container

--- a/pages/AddContact.html
+++ b/pages/AddContact.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/AddContact.css">
     <title>Add Person</title>
 </head>
 <body>
@@ -11,8 +13,8 @@
         <div class="logo-content">
             <img src="../assets/icon.png" alt="" height="50" width="50" >
             <div>
-                <span class="emp-text">ADDRESS</span><br>
-                <span class="emp-text emp-payroll">BOOK</span>
+                <span class="address-text">ADDRESS</span><br>
+                <span class="address-text book-text">BOOK</span>
             </div>
         </div>
     </header>
