ADDED: validation of name

--- a/pages/AddContact.html
+++ b/pages/AddContact.html
@@ -19,7 +19,7 @@
         </div>
     </header>
     <div class="form-content">
-        <form class="form" action="#" onsubmit="save(event);return false">
+        <form class="form" action="#" autocomplete="off">
             <div class="form-head"> PERSON ADDRESS FORM </div>
             <div class="row-content">
                 <label class="label text" for="name">Full Name</label>
@@ -67,6 +67,8 @@
                        
         </form>
     </div>
+    <script src="../js/AddressBookData.js"></script>
+    <script src="../js/AddressBook.js"></script>
     
 </body>
 </html>
